--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=isnow
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ovTWKohjIJz1CQULxROwgxH3YHtog1vi0SZWlBQifVw=
 APP_DEBUG=true
 APP_URL=http://localhost
+SERVER_PORT=2995
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=isnowdb
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -24,11 +25,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=miguel.dechavez@nidec.com
+MAIL_PASSWORD=migz112995
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
