--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=isnow
 APP_ENV=local
-APP_KEY=base64:f4d+Pp5kSeqK0wJgPx2xeK4qhor4RHyT+HghdaEYvAs=
+APP_KEY=base64:ovTWKohjIJz1CQULxROwgxH3YHtog1vi0SZWlBQifVw=
 APP_DEBUG=true
 APP_URL=http://localhost
 SERVER_PORT=2995
@@ -18,19 +18,19 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=20
+SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.googlemail.com
-MAIL_PORT=465
-MAIL_USERNAME=miguel.dechavez@nidec.com
-MAIL_PASSWORD=migz112995
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=miguel.dechavez.48@gmail.com
+MAIL_PASSWORD=sbfbzzyqjnpvcfsf
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=miguel.dechavez.48@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
